# backend_logging_tutorial

./: .dockerignore  Dockerfile  SUMMARY_AND_REVIEW.md  USAGE_GUIDE.md  server.py
advanced/: 01_log_aggregation_elk.py  02_mcp_logging_service.py  03_cloud_native_logging.py  advanced_features.md  enterprise_config.yaml
axios_teaching/: LEARNING_SUMMARY.md  README.md  USAGE_GUIDE.md  package-lock.json  package.json
axios_teaching/advanced/: 01_token_refresh_pattern.js  02_request_cancel_pattern.js  advanced_features.md
axios_teaching/foundation/: 01_basic_get_post.js  02_params_headers.js  03_instance_and_interceptor.js  04_error_timeout_retry.js  foundation_cheatsheet.md
axios_teaching/integration/: 01_service_layer_pattern.js  02_parallel_and_sequential_requests.js  integration_guide.md
axios_teaching/project/project_api_client_demo/: README.md
axios_teaching/project/project_api_client_demo/src/http/: client.js
axios_teaching/project/project_api_client_demo/src/services/: userService.js
foundation/: 01_basic_logging.py  02_advanced_config.py  03_error_handling.py  foundation_cheatsheet.md
frontend/: index.html
integration/: 01_web_framework_integration.py  02_database_integration.py  03_performance_optimization.py  integration_guide.md
project/: README.md  project_roadmap.md  pyproject.toml  requirements.txt
